--- a/templates/compose/proxy.yaml.erb
+++ b/templates/compose/proxy.yaml.erb
@@ -14,7 +14,7 @@ services:
     networks:
       lb:
         aliases:
-          - traefik-<%= @config['app']['name'].lowercase %>
+          - traefik-<%= @config['app']['name'].downcase %>
       default: {}
 
 networks:
